# smol_sim

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: config.hxx  main.cxx
